--- a/client/src/app/components/work-zone/work-zone.component.scss
+++ b/client/src/app/components/work-zone/work-zone.component.scss
@@ -10,8 +10,8 @@
 
 .work-zone {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 
 app-draw-area {
